--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,18 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /*aliases*/
+    "baseUrl": "./",
+    "paths": {
+      "app/*": ["./src/app/*"],
+      "pages/*": ["./src/pages/*"],
+      "widgets/*": ["./src/widgets/*"],
+      "features/*": ["./src/features/*"],
+      "entities/*": ["./src/entities/*"],
+      "shared/*": ["./src/shared/*"],
+      "uikit/*": ["./src/shared/uikit/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
