--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "blog",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "unit": "jest"
-  },
-  "dependencies": {
-    "blog": "file:",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "jest": "^29.7.0",
-    "sass-embedded": "^1.86.3",
-    "ts-jest": "^29.3.2",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "vite-plugin-svgr": "^4.3.0"
-  }
+    "name": "blog",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite --host 0.0.0.0",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "unit": "jest",
+        "format:check": "prettier --check src/**/*.{js,ts,tsx,jsx}",
+        "format:write": "prettier --write src/**/*.{js,ts,tsx,jsx}"
+    },
+    "dependencies": {
+        "blog": "file:",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router-dom": "^6.30.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.21.0",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^22.14.1",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "jest": "^29.7.0",
+        "prettier": "^3.5.3",
+        "sass-embedded": "^1.86.3",
+        "ts-jest": "^29.3.2",
+        "ts-node": "^10.9.2",
+        "typescript": "~5.7.2",
+        "typescript-eslint": "^8.24.1",
+        "vite": "^6.2.0",
+        "vite-plugin-svgr": "^4.3.0"
+    }
 }
