--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "scripts": {
         "dev": "vite --host 0.0.0.0",
         "build": "tsc -b && vite build",
-        "lint": "eslint .",
         "preview": "vite preview",
         "unit": "jest",
-        "format:check": "prettier --check src/**/*.{js,ts,tsx,jsx}",
-        "format:write": "prettier --write src/**/*.{js,ts,tsx,jsx}",
+        "lint": "eslint .",
+        "style-lint": "stylelint src/**/*.scss",
+        "style-lint:fix": "stylelint src/**/*.scss --fix",
+        "format:check": "prettier --check src/**/*.{js,ts,tsx,jsx,scss}",
+        "format:write": "prettier --write src/**/*.{js,ts,tsx,jsx,scss}",
         "analyze": "vite-bundle-visualizer --config vite.config.ts"
     },
     "dependencies": {
@@ -21,6 +23,9 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.14.1",
         "@types/react": "^19.0.10",
@@ -30,9 +35,16 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-transformer-svg": "^2.1.0",
         "prettier": "^3.5.3",
         "sass-embedded": "^1.86.3",
+        "stylelint": "^16.19.1",
+        "stylelint-config-recess-order": "^6.0.0",
+        "stylelint-config-standard": "^38.0.0",
+        "stylelint-config-standard-scss": "^14.0.0",
         "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "typescript": "~5.7.2",
