--- a/package.json
+++ b/package.json
@@ -1,56 +1,73 @@
 {
-    "name": "blog",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite --host 0.0.0.0",
-        "build": "tsc -b && vite build",
-        "preview": "vite preview",
-        "unit": "jest",
-        "lint": "eslint .",
-        "style-lint": "stylelint src/**/*.scss",
-        "style-lint:fix": "stylelint src/**/*.scss --fix",
-        "format:check": "prettier --check src/**/*.{js,ts,tsx,jsx,scss}",
-        "format:write": "prettier --write src/**/*.{js,ts,tsx,jsx,scss}",
-        "analyze": "vite-bundle-visualizer --config vite.config.ts"
-    },
-    "dependencies": {
-        "blog": "file:",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-router-dom": "^6.30.0"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.21.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.3.0",
-        "@testing-library/user-event": "^14.6.1",
-        "@types/jest": "^29.5.14",
-        "@types/node": "^22.14.1",
-        "@types/react": "^19.0.10",
-        "@types/react-dom": "^19.0.4",
-        "@vitejs/plugin-react": "^4.3.4",
-        "eslint": "^9.21.0",
-        "eslint-plugin-react-hooks": "^5.1.0",
-        "eslint-plugin-react-refresh": "^0.4.19",
-        "globals": "^15.15.0",
-        "identity-obj-proxy": "^3.0.0",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "jest-transformer-svg": "^2.1.0",
-        "prettier": "^3.5.3",
-        "sass-embedded": "^1.86.3",
-        "stylelint": "^16.19.1",
-        "stylelint-config-recess-order": "^6.0.0",
-        "stylelint-config-standard": "^38.0.0",
-        "stylelint-config-standard-scss": "^14.0.0",
-        "ts-jest": "^29.3.2",
-        "ts-node": "^10.9.2",
-        "typescript": "~5.7.2",
-        "typescript-eslint": "^8.24.1",
-        "vite": "^6.2.0",
-        "vite-bundle-visualizer": "^1.2.1",
-        "vite-plugin-svgr": "^4.3.0"
-    }
+  "name": "blog",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite --host 0.0.0.0",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "unit": "jest --config config/jest.config.ts",
+    "unit:precommit": "jest --config config/jest.config.ts --findRelatedTests",
+    "lint": "eslint . --config config/eslint.config.js",
+    "style-lint": "stylelint src/**/*.scss --config config/.stylelintrc.json",
+    "style-lint:fix": "stylelint --config config/.stylelintrc.json src/**/*.scss --fix",
+    "format:check": "prettier --check src/**/*.{js,ts,tsx,jsx,scss} --config config/.prettierrc",
+    "format:write": "prettier --write src/**/*.{js,ts,tsx,jsx,scss} --config config/.prettierrc",
+    "analyze": "vite-bundle-visualizer --config vite.config.ts",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "blog": "file:",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transformer-svg": "^2.1.0",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "sass-embedded": "^1.86.3",
+    "stylelint": "^16.19.1",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0",
+    "vite-bundle-visualizer": "^1.2.1",
+    "vite-plugin-svgr": "^4.3.0"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,tsx,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{css,scss}": [
+      "stylelint --fix",
+      "prettier --write"
+    ],
+    "**/*.{js,ts,tsx}": [
+      "npm run unit:precommit"
+    ]
+  }
 }
