--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "npm run lint",
-      "npm run format:write"
+      "npm run format:write",
+      "git add"
     ],
     "**/*.{css,scss}": [
       "npm run style-lint:fix",
-      "npm run format:write"
+      "npm run format:write",
+      "git add"
     ],
     "**/*.test.{ts,tsx}": [
       "npm run unit:precommit"
