--- a/package.json
+++ b/package.json
@@ -61,13 +61,11 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "npm run lint",
-      "npm run format:write",
-      "git add"
+      "npm run format:write"
     ],
     "**/*.{css,scss}": [
       "npm run style-lint:fix",
-      "npm run format:write",
-      "git add"
+      "npm run format:write"
     ],
     "**/*.test.{ts,tsx}": [
       "npm run unit:precommit"
